<resources>
    <string name="app_name">Time Banking App</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Sign Up Now!</string>
    <string name="btn_link_to_login">Already registered? Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="jobs">Jobs</string>
    <string name="contact">Contact</string>
    <string name="accept_job">Accept Job</string>
    <string name="job1">
        Cletus Andoh
    \nI need help with my car
    \nPay: 30 minutes</string>
    <string name="job2">
        Vincent Zhang
    \nI need help painting my house
    \nPay: 1 hour</string>
    <string name="job3">
        Joe
    \nI need some tutoring help
    \nPay: 1 hour 30 minutes</string>
    <string name="job4">
        Xin
    \nI need someone to cut my garden
    \nPay: 30 minutes</string>

    <string name="intro1">
        Cletus Andoh
    \nSyracuse, NY
    \nTime Left: 5 hours</string>

    <string name="desc1">I have been having some troubles my car. It has constantly been breaking
    down and I thin k it is because of the engine. If any mechanics or anyone with car
    experience can help, than would be great. Willing to pay 30 minutes.</string>
    <string name="job_submit">Submit</string>

    <string-array name="pay_amounts">
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>1 hour 30 minutes</item>
        <item>2 hours</item>
        <item>2 hours 30 minutes</item>
        <item>3 hours</item>
        <item>U3 hours 30 minutes</item>
        <item>4 hours</item>
    </string-array>
</resources>
